userオプション返却API追加+UI修正
